PLANET-6070 Use spans instead of CSS to show bullets in post meta
This allows us to be more flexible with where we place them

--- a/assets/src/scss/pages/post/_post.scss
+++ b/assets/src/scss/pages/post/_post.scss
@@ -42,6 +42,10 @@
         color: inherit;
       }
 
+      .single-post-meta-bullet {
+        margin: 0 8px;
+      }
+
       .single-post-author,
       .single-post-time,
       .comment-link {
@@ -51,32 +55,13 @@
 
       .single-post-author {
         font-weight: 500;
-
-        &:after {
-          content: "\2022";
-          pointer-events: none;
-          display: inline-block;
-          font-weight: normal;
-          margin: 0 8px;
-          top: 0;
-        }
       }
 
       .comment-link {
         font-weight: 500;
 
-        &:before {
-          content: "\2022";
-          pointer-events: none;
-          display: inline-block;
-          font-weight: normal;
-          margin: 0 8px;
-          top: 0;
-        }
-
         img {
-          width: 14px;
-          margin-right: 3px;
+          width: 17px;
         }
       }
     }
