--- a/templates/single-attachment.twig
+++ b/templates/single-attachment.twig
@@ -15,6 +15,7 @@
 							<a href="{{ post.author.path }}">{{ post.author.name }}</a>
 						</address>
 					{% endif %}
+					<span class="single-post-meta-bullet" aria-hidden="true">&#8226;</span>
 					<time class="single-post-time" pubdate>{{ post.post_date|date }}</time>
 				</div>
 				{% include "blocks/share_buttons.twig" with {social:post.share_meta} %}
