--- a/templates/single.twig
+++ b/templates/single.twig
@@ -69,8 +69,10 @@
 							{% endif %}
 						</address>
 					{% endif %}
+					<span class="single-post-meta-bullet" aria-hidden="true">&#8226;</span>
 					<time class="single-post-time" pubdate>{{ post.post_date|date }}</time>
 					{% if ( show_comments ) %}
+						<span class="single-post-meta-bullet" aria-hidden="true">&#8226;</span>
 						<a href="#comments" class="comment-link">
 									{{ 'comments'|svgicon }}
 									<span class="quantity"> {{ post_comments_count }} <span class="display-text">{{ __( 'Comments', 'planet4-master-theme' ) }}</span>
@@ -102,7 +104,7 @@
 				{{ fn('do_blocks', post.articles )|raw }}
 			{% endif %}
 		</section>
-		{% if ( 'closed' != post.comment_status ) %}
+		{% if ( show_comments ) %}
 			{% include "comments_section.twig" with {comments:post.get_comments()} %}
 		{% endif %}
 	</article>
