PLANET-6070 Add border-top to post Articles block
This is to comply with the new post designs

--- a/templates/single.twig
+++ b/templates/single.twig
@@ -98,12 +98,11 @@
 
 		{% include "blocks/author_profile.twig" with {post:post} %}
 
-
-		<section class="articles-block">
-			{% if ( post.articles ) %}
+		{% if ( post.articles ) %}
+			<section class="container post-articles-block">
 				{{ fn('do_blocks', post.articles )|raw }}
-			{% endif %}
-		</section>
+			</section>
+		{% endif %}
 		{% if ( show_comments ) %}
 			{% include "comments_section.twig" with {comments:post.get_comments()} %}
 		{% endif %}
