--- a/assets/src/scss/pages/post/_post.scss
+++ b/assets/src/scss/pages/post/_post.scss
@@ -73,4 +73,13 @@
       padding-right: 0;
     }
   }
+
+  .post-articles-block .articles-block {
+    border-top: 1px solid transparentize($grey-20, 0.5);
+    padding-top: 16px;
+
+    @include medium-and-up {
+      padding-top: 24px;
+    }
+  }
 }
