PLANET-6257: New country selector design
Ref: https://jira.greenpeace.org/browse/PLANET-6257

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -49,6 +49,8 @@
 
 		{{ function('wp_footer') }}
 	{% endblock %}
-	<script id="countries_script" type="application/json">{% include "countries.json" %}</script>
+	{% if not new_design_country_selector %}
+		<script id="countries_script" type="application/json">{% include "countries.json" %}</script>
+	{% endif %}
 </body>
 </html>
