--- a/templates/footer_social_media.twig
+++ b/templates/footer_social_media.twig
@@ -1,36 +1,38 @@
-<ul class="footer-social-media list-unstyled col-md-8 col-lg-5">
-  {% if social_overrides is defined and social_overrides|length %}
-    {% for social in social_overrides %}
-      <li>
-        <a href="{{ social.url }}"
+<div class="footer-social-media">
+  <span>{{ __( 'Follow us', 'planet4-master-theme' ) }}</span>
+  <ul class="list-unstyled">
+    {% if social_overrides is defined and social_overrides|length %}
+      {% for social in social_overrides %}
+        <li>
+          <a href="{{ social.url }}"
             data-ga-category="Footer Navigation"
             data-ga-action="Social Icons"
             data-ga-label="{{ social.icon }}">
-          {{ social.icon|svgicon }}
-          <span class="visually-hidden">{{ social.icon }}</span>
-        </a>
-      </li>
-    {% endfor %}
-  {% else %}
-    {% for social in footer_social_menu %}
-      {% set name = "" %}
-      {% for class_name in social.classes %}
-        {% if 'fa-' in class_name %}
-          {% set name = class_name[3:] %}
-        {% else %}
-          {% set name = class_name %}
-        {% endif %}
+            {{ social.icon|svgicon }}
+            <span class="visually-hidden">{{ social.icon }}</span>
+          </a>
+        </li>
       {% endfor %}
-      <li>
-        {% set social_url = social.url %}
-        <a href="{{ social_url }}"
+    {% else %}
+      {% for social in footer_social_menu %}
+        {% set name = "" %}
+        {% for class_name in social.classes %}
+          {% if 'fa-' in class_name %}
+            {% set name = class_name[3:] %}
+          {% else %}
+            {% set name = class_name %}
+          {% endif %}
+        {% endfor %}
+        <li>
+          <a href="{{ social.url }}"
             data-ga-category="Footer Navigation"
             data-ga-action="Social Icons"
             data-ga-label="{{ social.title }}">
-          {{ name|svgicon }}
-          <span class="visually-hidden">{{ social.title }}</span>
-        </a>
-      </li>
-    {% endfor %}
-  {% endif %}
-</ul>
+            {{ name|svgicon }}
+            <span class="visually-hidden">{{ social.title }}</span>
+          </a>
+        </li>
+      {% endfor %}
+    {% endif %}
+  </ul>
+</div>
