--- a/templates/base.twig
+++ b/templates/base.twig
@@ -41,7 +41,7 @@
 	{% endif %}
 
 	{% block footer %}
-		{% include 'footer.twig' with { 'nav_type' : custom_styles.nav_type == 'planet4' ? 'minimal' : 'default' } %}
+		{% include 'footer.twig' with { 'nav_type' : custom_styles.nav_type } %}
 
 		{% block cookies %}
 			{% include 'cookies.twig' %}
