--- a/assets/src/scss/style.scss
+++ b/assets/src/scss/style.scss
@@ -28,7 +28,7 @@ Text Domain: planet4-master-theme
 // Components
 @import "components/blockquote";
 @import "components/buttons";
-@import "components/share-buttons";
+//@import "components/share-buttons";  //Removing social media sharing from page-header - Isuue#163
 @import "components/spinner";
 @import "components/skip-links";
 @import "components/tweet-block";
