--- a/assets/src/scss/pages/post/_post.scss
+++ b/assets/src/scss/pages/post/_post.scss
@@ -59,9 +59,8 @@
           text-decoration: none;
         }
 
-        img {
-          width: 14px;
-          margin-right: 3px;
+        .icon {
+          top: 0;
         }
 
         .quantity {
