--- a/templates/single.twig
+++ b/templates/single.twig
@@ -79,7 +79,7 @@
 							{% if ( show_comments ) %}
 								<span class="separator">|</span>
 								<a href="#comments" class="comment-link">
-									<img src="{{ data_nav_bar.images }}speech_bubble.svg">
+									{{ 'comments'|svgicon }}
 									<span class="quantity"> {{ post_comments_count }} <span class="display-text">{{ __( 'Comments', 'planet4-master-theme' ) }}</span>
 								</a>
 							{% endif %}
