PLANET-6005 Sync svg icons with Design System
Ref: https://jira.greenpeace.org/browse/PLANET-6005

---

Added chevron icon that affects these blocks:
- SplitTwoColumns
- Carousel Header
- Timeline

Also removed chevron from Submenu block, since according to the design
system the bullet style is just using a regular bullet.

--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
@@ -556,10 +556,13 @@ $medium-image-height: 600px;
     .carousel-control-prev-icon {
       display: none;
       text-align: center;
-      width: 24px;
+      width: 28px;
       height: 46px;
-      background: url("../../public/images/carousel-arrow-prev.png");
-      background-size: cover;
+      background-image: none;
+      mask-image: url("../../public/images/icons/chevron.svg");
+      mask-size: cover;
+      background-color: $white;
+      transform: rotate(180deg);
 
       @include large-and-up {
         display: block;
@@ -598,11 +601,13 @@ $medium-image-height: 600px;
 
     .carousel-control-next-icon {
       text-align: center;
-      width: 24px;
+      width: 28px;
       height: 46px;
       cursor: pointer;
-      background: url("../../public/images/carousel-arrow-next.png");
-      background-size: cover;
+      background-image: none;
+      mask-image: url("../../public/images/icons/chevron.svg");
+      mask-size: cover;
+      background-color: $white;
       display: none;
 
       @include large-and-up {
