--- a/assets/src/styles/blocks/SplitTwoColumns.scss
+++ b/assets/src/styles/blocks/SplitTwoColumns.scss
@@ -149,11 +149,23 @@
 
 .split-two-column-item-link {
   text-decoration: none;
-  color: $yellow;
 
   &:hover {
-    color: $yellow;
     text-decoration: underline;
+  }
+
+  &:after {
+    content: "";
+    pointer-events: none;
+    margin-inline-start: 7px;
+    height: .7rem;
+    width: .7rem;
+    display: inline-block;
+    mask-image: url("../../public/images/icons/chevron.svg");
+    mask-repeat: no-repeat;
+    mask-size: contain;
+    background-repeat: no-repeat;
+    background-color: currentColor;
   }
 }
 
@@ -283,32 +295,21 @@
 
       &:after {
         content: "";
-        position: absolute;
-        top: 40%;
-        right: 15px;
         pointer-events: none;
-        background-image: url("../../public/images/icons/angle-right.svg");
-        background-position: 50% 50%;
-        background-size: 1rem 1rem;
-        background-repeat: no-repeat;
-        margin-right: 2px;
-        height: 2.2rem;
-        width: 2.2rem;
-        margin-bottom: -2px;
+        height: 1.7rem;
+        width: 1.7rem;
         display: inline-block;
-        @supports (mask-repeat: no-repeat) or (-webkit-mask-repeat: no-repeat) {
-          & {
-            background-image: none;
-            background-color: $yellow;
-            mask-image: url("../../public/images/icons/angle-right.svg");
-            mask-repeat: no-repeat;
-            margin-right: 0;
-          }
-        }
+        mask-image: url("../../public/images/icons/chevron.svg");
+        mask-repeat: no-repeat;
+        mask-size: contain;
+        background-repeat: no-repeat;
+        background-color: currentColor;
+        position: absolute;
+        right: 10px;
 
         html[dir="rtl"] & {
+          left: 10px;
           right: auto;
-          left: 15px;
         }
       }
     }
