PLANET-5801 Add link state colors and align in-list links with Design System
Ref: https://jira.greenpeace.org/browse/PLANET-5801

---

- Added active, visited, focus state to main typography rules. According
to the Design System, these are used almost in all links.
- Added the exceptions for the above states (mainly buttons and navbar).
- Moved pdf icon after the link, to follow Design System.
- Move sitemap tag-item class to css to add more properties for nested
links.
- Adjust headers top margin, since columns break on medium.

--- a/assets/src/scss/base/_icons.scss
+++ b/assets/src/scss/base/_icons.scss
@@ -9,19 +9,18 @@
 }
 
 a.pdf-link {
-  &::before {
+  &::after {
     content: "";
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: var(--link--color, $link-color);
-    mask-image: url("../../images/file-pdf.svg");
-    mask-repeat: no-repeat;
-    mask-position: center;
+    display: inline-block;
     height: 1rem;
     width: 1rem;
     margin-bottom: -2px;
-    margin-inline-end: 2px;
-    display: inline-block;
+    margin-inline-start: .2rem;
+    margin-inline-end: .1rem;
+    background-color: currentColor;
+    mask-image: url("../../images/file-pdf.svg");
+    mask-repeat: no-repeat;
+    mask-position: center;
   }
 
   &:hover::before {
@@ -66,15 +65,15 @@ a.external-link {
   &::after {
     content: "";
     display: inline-block;
-    background-color: var(--link--color, $link-color);
+    height: .7rem;
+    width: .7rem;
+    margin-inline-start: .2rem;
+    margin-inline-end: .1rem;
+    background-color: currentColor;
     mask-image: url("../../images/external-link.svg");
     mask-repeat: no-repeat;
     mask-position: center;
     mask-size: contain;
-    height: .7rem;
-    width: .7rem;
-    margin-inline-start: .3rem;
-    margin-inline-end: .4rem;
   }
 
   &:hover::after {
