--- a/assets/src/scss/components/_buttons.scss
+++ b/assets/src/scss/components/_buttons.scss
@@ -30,10 +30,12 @@
 
   &:hover,
   &:focus,
-  &:active {
+  &:active,
+  &:visited {
     color: $white;
     text-decoration: none;
     outline: none;
+    border: none;
   }
 
   &:disabled,
