--- a/templates/sitemap.twig
+++ b/templates/sitemap.twig
@@ -6,7 +6,7 @@
 			<div class="row">
 				{% if (actions) %}
 					<div class="col-md-7 order-md-1 col-lg-4">
-						<h5 class="mb-3 mt-5 mt-md-0">{{ actions_title }}</h5>
+						<h5 class="mb-3 mt-5 mt-lg-0">{{ actions_title }}</h5>
 						{% for action in actions %}
 							<a href="{{ action.link }}">{{ action.title|e('wp_kses_post')|raw }}</a><br/>
 						{% endfor %}
@@ -14,12 +14,12 @@
 				{% endif %}
 				{% if (issues) %}
 					<div class="col-md-7 order-md-3 order-lg-2 col-lg-3">
-						<h5 class="mb-3 mt-5 mt-md-0">{{ issues_title }}</h5>
+						<h5 class="mb-3 mt-5 mt-lg-0">{{ issues_title }}</h5>
 						{% for issue in issues %}
 							<a href="{{ issue.link }}">{{ issue.title|e('wp_kses_post')|raw }}</a><br/>
 							{% if ( issue.campaigns ) %}
 								{% for campaign in issue.campaigns %}
-									<a class="tag-item" style="margin-left: 30px;"
+									<a class="tag-item"
 									   href="{{ campaign.link|default('#') }}">
 									   <span aria-label="hashtag">#</span>{{ campaign.name|e('wp_kses_post')|raw }}
 									</a>
@@ -31,7 +31,7 @@
 				{% endif %}
 				{% if (evergreen_pages) %}
 					<div class="col-md-5 order-md-2 order-lg-3 col-lg-3">
-						<h5 class="mb-3 mt-5 mt-md-0">{{ evergreen_title }}</h5>
+						<h5 class="mb-3 mt-5 mt-lg-0">{{ evergreen_title }}</h5>
 						{% for evergreen_page in evergreen_pages %}
 							<a href="{{ evergreen_page.link }}">{{ evergreen_page.title|e('wp_kses_post')|raw }}</a>
 							<br/>
@@ -40,7 +40,7 @@
 				{% endif %}
 				{% if (page_types) %}
 					<div class="col-md-5 order-md-4 col-lg-2">
-						<h5 class="mb-3 mt-5 mt-md-0">{{ page_types_title }}</h5>
+						<h5 class="mb-3 mt-5 mt-lg-0">{{ page_types_title }}</h5>
 						{% for page_type in page_types %}
 							<a href="{{ page_type.link }}">{{ page_type.name|e('wp_kses_post')|raw }}</a><br/>
 						{% endfor %}
