--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -1,3 +1,7 @@
+$menu-height-small: 3.375rem;
+$menu-height-large: 3.75rem;
+$min-height: 40px;
+
 .page-content {
   > * {
     position: relative;
