PLANET-6443 Update footer data attributes for new design
Ref: https://jira.greenpeace.org/browse/PLANET-6443

---

The change practically is just to replace both `Primary Links` and
`Secondary Links` with `Footer Links`.

--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -8,7 +8,7 @@
 						<li>
 							<a href="{{ primary.url }}"
 								data-ga-category="Footer Navigation"
-								data-ga-action="Primary Links"
+								data-ga-action="Footer Links"
 								data-ga-label="{{ primary.title }}">
 								{{ primary.title }}
 							</a>
@@ -19,7 +19,7 @@
 						<li>
 							<a href="{{ secondary.url }}"
 								data-ga-category="Footer Navigation"
-								data-ga-action="Secondary Links"
+								data-ga-action="Footer Links"
 								data-ga-label="{{ secondary.title }}">
 								{{ secondary.title }}
 							</a>
