PLANET-5802 Align comments link states with Design System
Ref: https://jira.greenpeace.org/browse/PLANET-5802

---

- Simplify css code but preserve underline "hack" to avoid the icon to
be underlined.
- Remove focus state.

--- a/assets/src/scss/base/_typography.scss
+++ b/assets/src/scss/base/_typography.scss
@@ -106,10 +106,6 @@ a --link-- {
     border-radius: 4px;
   }
 
-  &:focus-visible {
-    outline: 0;
-  }
-
   &:hover,
   &:active {
     color: $link-color;
@@ -120,4 +116,8 @@ a --link-- {
   &:visited {
     color: $link-color-visited;
   }
+}
+
+a:focus-visible {
+  outline: 0;
 }
