--- a/templates/single-password.twig
+++ b/templates/single-password.twig
@@ -10,7 +10,7 @@
 
 		<div class="container">
 			<div class="post-content">
-				<form id="password-form" class="password-form" action="{{login_url}}?action=postpass" method="post">
+				<form id="password-form" class="password-form" action="{{login_url}}?action=postpass&_wp_http_referer={{ post.link|url_encode }}" method="post">
 					<div class="mb-3">
 						<label for="pwbox-{{post.ID}}" class="form-label"><h6>{{ __( 'To see the content of this page, please enter your password  below', 'planet4-master-theme' ) }}</h6></label>
 						<div class="input-text">
