Remove script that makes Boxout follow scroll
* The new version of the block doesn't have this behavior.

Remove unused CSS that was served on all pages

* Using the selector this was only targeting a variant of an AB test
that we ran a year ago, but it was still served.
* Also remove it from the new version of Covers. That one is set up with
code splitting, so including the styles of another block really does not
make sense.

Fix act page image in editor

* This previously did not show the right image if the act page was
selected.
* Interesting thing I encountered, and don't have an explanation for: I
initially added an additional `useSelect` call in the same scope that
already had 2. Interestingly this 3rd one resulted in a "rules of hooks
violation" that crashed the editor. This could be due to internals of
`useSelect` doing something weird, because this should not result in
that error. I got around the issue by extracting the additional data in
the existing `useSelect` call.

Add srcset and sizes, remove unused background img

* Previous code resulted in oversized image.
* Generated appropriate srcset using respimagelint.
* Remove useless background image.

Use only bottom variant of TAB block

* Remove editor CSS that was only needed for the old version.

Ensure old block using only imageId works

* These have only the image ID and not the URL.

Ensure the block only needs IDs, remove tags UI

* The previous code would set multiple attributes that are fetched
dynamically by the back end anyway. So it made the code more complex and
caused data to become outdated if the source ID changed.
* The previous code also removed custom entered data for no good reason,
because the back end render already prefers all Take Action Page data.
Instead we can keep this custom data, so that it's still available when
the block is switched back from a Take Action Page.
* Remove the tags which are not part of the new design. Preserve the
tags attribute anyway for now, so that we do

--- a/assets/src/styles/blocks.scss
+++ b/assets/src/styles/blocks.scss
@@ -10,6 +10,8 @@
 @import "blocks/Submenu";
 @import "blocks/Cookies";
 
+@import "blocks/TakeActionBoxout/style";
+
 // EN Blocks
 @import "blocks/OldENForm/components/enform";
 @import "blocks/OldENForm/components/enform-full-width-bg";
