--- a/assets/src/styles/blocks/TakeActionBoxout/style.scss
+++ b/assets/src/styles/blocks/TakeActionBoxout/style.scss
@@ -1,31 +1,47 @@
-.action-card-bottom.cover-card {
-  background: white !important;
+.boxout {
+  background: white;
   padding: 0;
   width: 100%;
-  display: none;
   height: 120px;
   position: relative;
-  margin-top: 80px !important;
-  box-shadow: 0 4px 3px rgba(0, 0, 0, 0.16);
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.16);
   transition: box-shadow 0.2s;
   border-radius: 4px;
-  margin-right: 0;
-  margin-left: 0;
+
+  .cover-card-overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+  }
 
   &:hover {
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 1px 14px rgba(0, 0, 0, 0.3);
+
+    .boxout-heading {
+      text-decoration: underline;
+    }
+
+    .btn {
+      background-color: $orange-hover;
+    }
+  }
+
+  .not-now {
+    display: none;
   }
 
   img {
     display: block;
     width: 120px;
     height: 120px;
+    padding: 16px;
     pointer-events: none;
     float: left;
     object-fit: cover;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
-    margin-inline-end: 16px;
 
     html[dir="rtl"] & {
       float: right;
@@ -36,35 +52,18 @@
     }
   }
 
-  .cover-card-content {
+  .boxout-content {
     position: unset;
     padding: 16px;
   }
 
-  .cover-card-more {
-    display: block;
-    font-weight: 700;
-    font-family: $roboto;
-    color: $grey-80;
-    font-size: 28px;
-    line-height: 1;
-    bottom: 140px;
-    position: absolute;
-    left: 0;
-
-    html[dir="rtl"] & {
-      right: 0;
-      left: auto;
-    }
-  }
-
-  .cover-card-tag,
   &::before,
   &::after {
     display: none;
   }
 
-  .cover-card-heading {
+  .boxout-heading {
+    font-family: $roboto;
     color: $grey-80;
     text-shadow: none;
     font-size: 16px;
@@ -101,39 +100,38 @@
       right: auto;
       left: 16px;
     }
+  }
 
-    &:hover,
-    &:focus,
-    &:active {
-      background-color: $orange-hover;
-    }
+  .boxout-excerpt {
+    display: none;
   }
 
   @include medium-and-up {
     min-height: 200px;
-    margin-top: 100px !important;
     float: none;
 
     html[dir="rtl"] & {
       float: none;
     }
 
-    .cover-card-heading {
+    .boxout-heading {
       margin-bottom: 10px;
       font-size: 20px;
       margin-top: 0;
     }
 
-    .cover-card-content {
+    .boxout-content {
       padding: 20px;
     }
 
     img {
       height: 100%;
       width: 45%;
+      padding: 0;
+      margin-inline-end: 16px;
     }
 
-    .cover-card-excerpt {
+    .boxout-excerpt {
       color: $grey;
       line-height: 1.5;
       font-size: 14px;
@@ -151,15 +149,9 @@
     .btn {
       font-size: 14px;
     }
-
-    .cover-card-more {
-      font-size: 40px;
-      bottom: 230px;
-    }
   }
 
   @include large-and-up {
     min-height: 210px;
-    max-width: 65%;
   }
 }
