--- a/assets/src/scss/layout/_footer-social-media.scss
+++ b/assets/src/scss/layout/_footer-social-media.scss
@@ -42,7 +42,7 @@
     transition: color 100ms linear;
 
     &:hover {
-      color: $white;
+      color: transparentize($white, .8);
     }
   }
 
