PLANET-5799 Align title links with design system
Only the search results title links needed to be updated for their visited state. Other title links already behaved as expected.

--- a/assets/src/scss/pages/search/_search-results.scss
+++ b/assets/src/scss/pages/search/_search-results.scss
@@ -180,6 +180,10 @@
   @include large-and-up {
     font-size: 1.625rem;
   }
+
+  &:visited {
+    color: $grey-80;
+  }
 }
 
 .search-result-item-info {
