PLANET-5798 Add visited color to contextual navigation links
This commit also updates the contextual navigation links separator bullet color from black to blue (link color)

--- a/assets/src/scss/layout/_breadcrumbs.scss
+++ b/assets/src/scss/layout/_breadcrumbs.scss
@@ -26,12 +26,17 @@
     font-weight: 400;
     margin-inline-start: -12px;
     margin-inline-end: 8px;
+    color: $link-color;
   }
 
   .tag-item {
     _-- {
       color: $link-color;
       font-weight: 400;
+
+      &:visited {
+        color: $link-color-visited;
+      }
     }
     display: inline-block;
 
