Use outline instead of border for link focus state
* Outline does not change the height of the element it's applied to.

Ref: https://jira.greenpeace.org/browse/PLANET-6008

--- a/assets/src/scss/base/_typography.scss
+++ b/assets/src/scss/base/_typography.scss
@@ -102,7 +102,7 @@ a --link-- {
   text-decoration: none;
 
   &:focus {
-    border: 2px solid rgba(0, 106, 255, 0.4);
+    outline: 2px solid rgba(0, 106, 255, 0.4);
     border-radius: 4px;
   }
 
@@ -116,8 +116,4 @@ a --link-- {
   &:visited {
     color: $link-color-visited;
   }
-}
-
-a:focus-visible {
-  outline: 0;
 }
